web/src/app.css
@import 'tailwindcss';
/*For owner badge color  */
@source inline('{text,bg}-{emerald,blue,purple,red,teal,orange,lime,slate}-{200,600}');
@plugin 'daisyui';
@plugin 'daisyui/theme' {
	name: caramellatte;
	default: true;
	prefersdark: false;
	color-scheme: light;

	--color-primary: #3d6b5e;
	--color-primary-content: #f2f2f2;
	--color-secondary: #4d6666;
	--color-secondary-content: #f2f2f2;

	--color-accent: #d47b63;
	--color-accent-content: #f2f2f2;

	--color-neutral: #5a4d47;
	--color-neutral-content: #f2f2f2;

	--color-warning: #b8873d;
	--color-warning-content: #f2f2f2;
	--color-info: #4a6b7a;
	--color-info-content: #f2f2f2;
	--color-success: #5a6e38;
	--color-success-content: #fafafa;
	--color-error: #a55744;
	--color-error-content: #fafafa;

	--color-base-100: #f5f1e8;
	--color-base-200: #e8e0d0;
	--color-base-300: #d8cfc0;
	--color-base-content: #2d2520;
}

@theme {
	--font-body: 'Nunito Variable', sans-serif;
	--color-base-50: #faf8f2;
	--color-base-nav: #3d3935;
	--color-base-popover: #fbf9f6;
	--color-base-input: #fbf9f6;
	--color-bg-checked: rgba(216, 241, 222, 0.5);
	--color-segmented: var(--color-slate-600);
	--color-segmented-content: #f2f2f2;
	--color-sage: rgba(138, 154, 91);
}

@layer base {
	body {
		font-family: 'Nunito Variable', sans-serif;
	}

	/* Start transition */

	@media (width <= 64rem) {
		@keyframes fade-in {
			from {
				opacity: 0;
			}
		}

		@keyframes fade-out {
			to {
				opacity: 0;
			}
		}

		@keyframes slide-from-right {
			from {
				transform: translateX(100%);
			}
		}

		@keyframes slide-to-left {
			to {
				transform: translateX(-100%);
			}
		}

		@keyframes slide-to-right {
			to {
				transform: translateX(100%);
			}
		}

		@keyframes slide-from-left {
			from {
				transform: translateX(-100%);
			}
		}

		:root::view-transition-old(bottom-nav),
		:root::view-transition-new(bottom-nav) {
			animation: none;
		}

		@media (prefers-reduced-motion: no-preference) {
			[data-direction='forward']:root::view-transition-old(content) {
				animation: 0.3s slide-to-left ease-in-out;
			}

			[data-direction='forward']:root::view-transition-new(content) {
				animation: 0.3s slide-from-right ease-in-out;
			}

			[data-direction='back']:root::view-transition-old(content) {
				animation: 0.3s slide-to-right ease-in-out;
			}

			[data-direction='back']:root::view-transition-new(content) {
				animation: 0.3s slide-from-left ease-in-out;
			}
		}
	}
	/* End transition */
	/* Source: https://css-loaders.com/nature/ */

	.custom-loader {
		width: 3rem;
		height: 1.5rem;
		border-radius: 3.75rem 3.75rem 0 0;
		position: relative;
		overflow: hidden;
	}

	.custom-loader:before {
		content: '';
		position: absolute;
		inset: 0 0 -100%;
		background:
			radial-gradient(farthest-side, #ffd738 80%, #0000) left 70% top 20%/0.75rem 0.75rem,
			radial-gradient(farthest-side, #020308 92%, #0000) left 65% bottom 19%/0.6rem 0.6rem,
			radial-gradient(farthest-side, #ecfefe 92%, #0000) left 70% bottom 20%/0.75rem 0.75rem,
			linear-gradient(#9eddfe 50%, #020308 0);
		background-repeat: no-repeat;
		animation: l5 2s infinite;
	}

	@keyframes l5 {
		0%,
		20% {
			transform: rotate(0);
		}
		40%,
		60% {
			transform: rotate(0.5turn);
		}
		80%,
		100% {
			transform: rotate(1turn);
		}
	}

	/* quicksand-latin-wght-normal */
	@font-face {
		font-family: 'Quicksand Variable';
		font-style: normal;
		font-display: swap;
		font-weight: 300 700;
		src: url(@fontsource-variable/quicksand/files/quicksand-latin-wght-normal.woff2)
			format('woff2-variations');
		unicode-range:
			U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
			U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
	}

	/* nunito-latin-wght-normal */
	@font-face {
		font-family: 'Nunito Variable';
		font-style: normal;
		font-display: swap;
		font-weight: 200 1000;
		src: url(@fontsource-variable/nunito/files/nunito-latin-wght-normal.woff2)
			format('woff2-variations');
		unicode-range:
			U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
			U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
	}

	.ec {
		--ec-bg-color: var(--color-base-100) !important;
		--ec-today-bg-color: var(--color-base-200) !important;
	}

	.ec.ec-day-grid {
		/* max-width: 90vw; */
		width: 100%;
	}

	.ec-title {
		font-size: 1.25rem;
		font-weight: 600 !important;
	}

	.ec-day.ec-today {
		border: 1px solid var(--color-secondary) !important;
	}

	.ec-day {
		&:hover {
			background-color: rgba(242, 189, 205, 0.3);
			.ec-day-head {
				font-weight: 600 !important;
			}
			color: #3d6b5e;
		}
	}

	.ec-bg-events {
		&:hover {
			cursor: pointer;
		}
	}

	.ec-header {
		border-top-left-radius: 10px !important;
		border-top-right-radius: 10px !important;
	}
}

@utility btn {
	&:not(.btn-outline) {
		border: 0px;
	}

	&.btn-outline {
		border-width: 1px;
	}
}

@utility input {
	background-color: var(--color-base-input);
}

@utility tracker-tabs {
	li {
		position: relative;
		padding-bottom: 0.25rem;

		&::after {
			position: absolute;
			content: '';
			bottom: 0;
			left: 50%;
			width: 100%;
			transform: translateX(-50%);
			height: 0.125rem;

			background-color: var(--color-base-300);
		}

		&[aria-current='page'] {
			font-weight: bold;
		}

		&[aria-current='page']::after {
			/* view-transition-name: active-tab; */
			position: absolute;
			content: '';
			bottom: 0px;
			left: 50%;
			width: 100%;
			transform: translateX(-50%);
			height: 0.125rem;

			background-color: var(--color-primary);
		}
	}
}

@utility btn-segmented {
	background-color: var(--color-segmented);
	color: var(--color-segmented-content);

	&.btn-soft {
		background-color: color-mix(in oklab, var(--color-segmented) 10%, transparent);
		color: var(--color-segmented);
	}

	&.btn-outline {
		border-color: var(--color-segmented);
		color: var(--color-segmented);
		background-color: transparent;
	}
}

